force-app/main/default/objects/Year_end_Review__c/Year_end_Review__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Year-End Review</label>
    <nameField>
        <displayFormat>YER{000000}</displayFormat>
        <label>Year End Review No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Year-End Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>