force-app/main/default/objects/Year_end_Review__c/fields/AO_Self_Evaluation_Value__c.field-meta.xml
<CustomField>
    <fullName>AO_Self_Evaluation_Value__c</fullName>
    <formula>CASE( Self_evaluation_Rating_AO__c, 
&quot;5&quot; , 5, 
&quot;4&quot; , 4,
&quot;3&quot; , 3, 
&quot;2&quot; , 2,
&quot;1&quot;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adv Ops: SELF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>