force-app/main/default/objects/Year_end_Review__c/fields/BA_D_STATIC__c.field-meta.xml
<CustomField>
    <fullName>BA_D_STATIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BA - D STATIC</label>
    <type>Checkbox</type>
</CustomField>