force-app/main/default/objects/Year_end_Review__c/fields/BA_Final__c.field-meta.xml
<CustomField>
    <fullName>BA_Final__c</fullName>
    <formula>IF(AND(CreatedById &lt;&gt; &quot;0052A000009xlB6&quot;, CreatedById &lt;&gt; &quot;0052A000009xinW&quot;, CreatedById &lt;&gt; &quot;005F0000002H4MV&quot;, CreatedById &lt;&gt; &quot;0052A000009LBSN&quot;, Job_Title_Static__c = &quot;Business Analyst&quot;),   (0.75*AO_Managing_Director_Value__c)+(0.1*BC_Managing_Director_Value__c)+(0.15*DC_Managing_Director_Value__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>