force-app/main/default/objects/Year_end_Review__c/fields/BC_Manager_Value__c.field-meta.xml
<CustomField>
    <fullName>BC_Manager_Value__c</fullName>
    <formula>IF( BA_D_STATIC__c = TRUE, BC_Managing_Director_Value__c, BC_Performance_Lead_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BC Manager Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>