force-app/main/default/objects/Year_end_Review__c/fields/BC_Self_Evaluation_Value__c.field-meta.xml
<CustomField>
    <fullName>BC_Self_Evaluation_Value__c</fullName>
    <formula>CASE( Self_Evaluation_Rating_BC__c, 
&quot;5&quot; , 5, 
&quot;4&quot; , 4, 
&quot;3&quot; , 3, 
&quot;2&quot; , 2, 
&quot;1&quot; , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build &amp; Add Clients: SELF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>