force-app/main/default/objects/Year_end_Review__c/fields/Comments_Development_Plan_3__c.field-meta.xml
<CustomField>
    <fullName>Comments_Development_Plan_3__c</fullName>
    <label>Manager Comments / Development Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>