force-app/main/default/objects/Year_end_Review__c/fields/Comments_Development_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comments_Development_Plan__c</fullName>
    <label>Comments / Development Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>