force-app/main/default/objects/Year_end_Review__c/fields/Consensus_Complete__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consensus Complete</label>
    <type>Checkbox</type>
</CustomField>