force-app/main/default/objects/Year_end_Review__c/fields/DC_Managing_Director_Value__c.field-meta.xml
<CustomField>
    <fullName>DC_Managing_Director_Value__c</fullName>
    <formula>CASE(Managing_Director_Rating_DC__c, 
&quot;5&quot; , 5, 
&quot;4&quot; , 4, 
&quot;3&quot; , 3, 
&quot;2&quot; , 2, 
&quot;1&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deeper Collaboration: MD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>