force-app/main/default/objects/Year_end_Review__c/fields/Definition_AO__c.field-meta.xml
<CustomField>
    <fullName>Definition_AO__c</fullName>
    <defaultValue>&quot;Develop and deliver “Advanced Operations” services to clients, striving to leverage the full portfolio of SSA’s Capabilities to drive measurable results.&quot;</defaultValue>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>