force-app/main/default/objects/Year_end_Review__c/fields/Definition_DC__c.field-meta.xml
<CustomField>
    <fullName>Definition_DC__c</fullName>
    <defaultValue>&quot;Foster collaboration through client work and “Building the Firm” activities and build depth of capability across our key offerings.&quot;</defaultValue>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>