force-app/main/default/objects/Year_end_Review__c/fields/Delta_2__c.field-meta.xml
<CustomField>
    <fullName>Delta_2__c</fullName>
    <formula>Final_Rating__c - Self_Final_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>