force-app/main/default/objects/Year_end_Review__c/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <label>Delta</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>