force-app/main/default/objects/Year_end_Review__c/fields/EA_Final__c.field-meta.xml
<CustomField>
    <fullName>EA_Final__c</fullName>
    <formula>IF(AND(CreatedById &lt;&gt; &quot;0052A000009xlB6&quot;, CreatedById &lt;&gt; &quot;0052A000009xinW&quot;, CreatedById &lt;&gt; &quot;005F0000002H4MV&quot;, CreatedById &lt;&gt; &quot;0052A000009LBSN&quot;, Job_Title_Static__c = &quot;Executive Assistant&quot;), (0.6*AO_Managing_Director_Value__c)+(0.2*BC_Managing_Director_Value__c)+(0.2*DC_Managing_Director_Value__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EA Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>