force-app/main/default/objects/Year_end_Review__c/fields/Exceptions_Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>Exceptions_Utilization_Rating__c</fullName>
    <formula>IF(AND(OR(CreatedById = &quot;005F0000007fFMD&quot; , CreatedById = &quot;0052A000009xinW&quot;),  Utilization_YTD__c  &gt;= 0.70), 5, 
IF(AND(OR(CreatedById = &quot;005F0000007fFMD&quot; , CreatedById = &quot;0052A000009xinW&quot;),  Utilization_YTD__c  &gt;= 0.55, Utilization_YTD__c   &lt;  0.70), 4,
IF(AND(OR(CreatedById = &quot;005F0000007fFMD&quot; , CreatedById = &quot;0052A000009xinW&quot;), Utilization_YTD__c  &gt;= 0.45, Utilization_YTD__c   &lt;  0.55), 3,
IF(AND(OR(CreatedById = &quot;005F0000007fFMD&quot; , CreatedById = &quot;0052A000009xinW&quot;),  Utilization_YTD__c  &gt;= 0.35, Utilization_YTD__c   &lt;  0.45), 2,
IF(AND(OR(CreatedById = &quot;005F0000007fFMD&quot; , CreatedById = &quot;0052A000009xinW&quot;), Utilization_YTD__c   &lt;  0.35), 1, 0.00)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceptions Utilization Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>