force-app/main/default/objects/Year_end_Review__c/fields/Goal_1_DC__c.field-meta.xml
<CustomField>
    <fullName>Goal_1_DC__c</fullName>
    <label>Goal 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>