force-app/main/default/objects/Year_end_Review__c/fields/Goal_2_AO__c.field-meta.xml
<CustomField>
    <fullName>Goal_2_AO__c</fullName>
    <label>Goal 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>