force-app/main/default/objects/Year_end_Review__c/fields/Goal_3_BC__c.field-meta.xml
<CustomField>
    <fullName>Goal_3_BC__c</fullName>
    <label>Goal 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>