force-app/main/default/objects/Year_end_Review__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To access your full Goal Record (including metrics), please right click on the Goal Record Name to open it in a new tab.</inlineHelpText>
    <label>Goal</label>
    <referenceTo>Goals__c</referenceTo>
    <relationshipName>Year_End_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>