force-app/main/default/objects/Year_end_Review__c/fields/M_Self__c.field-meta.xml
<CustomField>
    <fullName>M_Self__c</fullName>
    <formula>IF(OR(CreatedById = &quot;005F0000002H4MV&quot;, CreatedById = &quot;0052A000009LBSN&quot;), (0.0*AO_Self_Evaluation_Value__c) + (0.7*BC_Self_Evaluation_Value__c) + (0.3*DC_Self_Evaluation_Value__c) + (0.0*Utilization_Rating__c), 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M Self</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>