force-app/main/default/objects/Year_end_Review__c/fields/Managing_Director_Comments_DC__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_Comments_DC__c</fullName>
    <label>Managing Director Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>