force-app/main/default/objects/Year_end_Review__c/fields/Managing_Director_User__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Year_End_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>