force-app/main/default/objects/Year_end_Review__c/fields/Metric_1_AO__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_AO__c</fullName>
    <label>Metric 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>