force-app/main/default/objects/Year_end_Review__c/fields/Metric_2_DC__c.field-meta.xml
<CustomField>
    <fullName>Metric_2_DC__c</fullName>
    <label>Metric 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>