force-app/main/default/objects/Year_end_Review__c/fields/Metric_4_DC__c.field-meta.xml
<CustomField>
    <fullName>Metric_4_DC__c</fullName>
    <label>Metric 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>