force-app/main/default/objects/Year_end_Review__c/fields/Metric_5_BC__c.field-meta.xml
<CustomField>
    <fullName>Metric_5_BC__c</fullName>
    <label>Metric 5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>