force-app/main/default/objects/Year_end_Review__c/fields/Mid_Year_Review2__c.field-meta.xml
<CustomField>
    <fullName>Mid_Year_Review2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mid-Year Review</label>
    <referenceTo>Mid_Year_Review__c</referenceTo>
    <relationshipLabel>Year-End Reviews (Mid-Year Review)</relationshipLabel>
    <relationshipName>Year_End_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>