force-app/main/default/objects/Year_end_Review__c/fields/Mid_Year_Review__c.field-meta.xml
<CustomField>
    <fullName>Mid_Year_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mid-Year Review</label>
    <referenceTo>Mid_Year_Review__c</referenceTo>
    <relationshipName>Year_end_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>